WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278993
CSS transform functions should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=278993
Summary
CSS transform functions should not eagerly evaluate calc()
Sam Weinig
Reported
2024-09-01 13:44:40 PDT
CSS transform functions should not eagerly evaluate calc().
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2024-09-01 13:47:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33008
EWS
Comment 2
2024-09-02 18:03:55 PDT
Committed
283074@main
(8531e44d52ce): <
https://commits.webkit.org/283074@main
> Reviewed commits have been landed. Closing PR #33008 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-02 18:04:15 PDT
<
rdar://problem/135161678
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug