Source/WebCore/style/StyleBuilderState.cpp
@@ -66,7 +66,7 @@
 #include "StyleImageSet.h"
 #include "StyleNamedImage.h"
 #include "StylePaintImage.h"
-#include "TransformFunctions.h"
+#include "TransformOperationsBuilder.h"
 
 namespace WebCore {
 namespace Style {
